# iide

./: .gitmodules  Doxyfile  README.md  meson.build  org.github.kai66673.iide.json  repomix-output.md
.cache/clangd/index/: alloc.c.B44B6D6FBD4760C4.idx  alloc.h.0D20C8CC0EDD4BC4.idx  alloc.h.0E9711E1092C428C.idx  alloc.h.53C50666BDC21636.idx  alloc.h.598CBFDDF096396C.idx  alloc.h.62C55C6974D0153B.idx  alloc.h.8722C2D58545BB41.idx  alloc.h.98506C1D8F8B6F02.idx  alloc.h.B3BB6756007A5EEF.idx  alloc.h.B7FBF4F6B631FD70.idx  alloc.h.E1825F20ED756FEB.idx  api.h.23ECF71A441A1BA1.idx  array.h.1872DD3FC8159B77.idx  array.h.18837D430FDF8953.idx  array.h.72092993CE925684.idx  array.h.93AF744678466745.idx  array.h.9C9595D0017304BA.idx  array.h.AAF94C2C035B36D8.idx  array.h.B47C39311063BD56.idx  array.h.F7A1F6AC891C6C11.idx  atomic.h.A95AE4BB0FDA07B8.idx  endian.h.4BA328C750338531.idx  error_costs.h.98A0F6D183F1B1E8.idx  get_changed_ranges.c.6A7E1ACB828B9B80.idx  get_changed_ranges.h.34FABFF8FAF4ED79.idx  host.h.7472F14546983066.idx  language.c.014DC33F1396CCA7.idx  language.h.AF1481B98389AF55.idx  length.h.635AD2D9B4DB75FF.idx  lexer.c.C500EF44368A22DA.idx  lexer.h.73FA2E442E949B7D.idx  lib.c.3760C80CBB23C4A2.idx  node.c.66BFC1473A1682C9.idx  parser.c.0911CE9C0F1A7951.idx  parser.c.0D4A5609F6E205A2.idx  parser.c.1F2E4133AE5A1219.idx  parser.c.1F9C676CD00FD613.idx  parser.c.4548E63CD49B897A.idx  (+58 more)
.iide/: lsp.json
core/: SearchExtension.vala  SearchResult.vala  meson.build
data/: Adwaita-dark.xml  Adwaita.xml  meson.build  org.github.kai66673.iide.desktop.in  org.github.kai66673.iide.gschema.xml  org.github.kai66673.iide.metainfo.xml.in  org.github.kai66673.iide.service.in
data/icons/: meson.build
data/schemas/: org.github.kai66673.iide.gschema.xml
parsers/: ts_helper.c
plugins/: meson.build
plugins/python_search/: search.plugin  search.py
po/: POTFILES.in  meson.build
scripts/: gen-docs.sh  install-local-settings.sh.in
src/: application.vala  iide.gresource.xml  main.vala  meson.build  style.css  window.ui  window.vala
src/Services/: DocumentManager.vala  IconProvider.vala  ImageFactory.vala  JsonUtils.vala  LSPManager.vala  LSPService.vala  LanguageConfig.vala  LanguageRegistry.vala  LoggerService.vala  NavigationHistoryService.vala  PanelLayoutHelper.vala  PendingChange.vala  ProjectManager.vala  SettingsManager.vala  SettingsService.vala  SourceDocument.vala  SourceNodeItem.vala  StyleManager.vala  SymbIconProvider.vala  SymbolIconFactory.vala  TreeSitterManager.vala  Utils.vala
src/Services/Actions/: Action.vala  ActionManager.vala  AppAction.vala  AppActionsManager.vala  ShortcutSettings.vala
src/Services/Bookmarks/: BookmarkService.vala  BookmarksNavigator.vala  SourceBookMark.vala
src/Services/DAP/: BreakpointsService.vala  DapClient.vala  DapConfig.vala  DapService.vala  DapTargetConfig.vala
src/Services/JsonRpc/: RpcProcess.vala  RpcTransport.vala  TcpProcess.vala
src/Services/LSP/: CompletionProvider.vala  DiagnosticsService.vala  IdeLspClient.vala  IdeLspManager.vala  IdeLspService.vala  LspClient.vala  LspClientSyncer.vala  LspDiagnosticsMark.vala  LspDocumentClient.vala  LspProcess.vala  LspService.vala  LspTypes.vala
src/Services/LSP/config/: CppLspConfig.vala  LspConfig.vala  LspRegistry.vala  PythonLspConfig.vala
src/Services/LSP/index/: ClangTidy.vala
src/Services/TextLineMarks/: TextLineMark.vala  TextLineMarkService.vala
src/Services/TreeSitter/: BaseTreeSitterHighlighter.vala  BaseTreeSitterIndenter.vala  IndentBlock.vala  OldBaseTreeSitterHighlighter.vala  PythonTreeSitterHighlighter.vala  SimpleTreeSitterHighlighter.vala  TreeSitterDocument.vala  TreeSitterHighlighter.vala  TreeSitterManager.vala  TreeSitterStyleMapper.vala
src/Services/TreeSitter/cpp/: CppHighlighter.vala  CppTSHighlighter.vala  CppTreeSitterHighlighter.vala
src/Services/TreeSitter/model/: AstItem.vala  AstModel.vala
src/Services/TreeSitter/python/: PythonHighlighter.vala  PythonIndenter.vala  PythonTSHighlighter.vala  PythonTSIndenter.vala  PythonTreeSitterHighlighter.vala  higlights.scm
src/Services/TreeSitter/queries/: TSHQueryPython.vala
src/Services/TreeSitter/rust/: RustHighlighter.vala
src/Services/TreeSitter/vala/: ValaHighlighter.vala  ValaTSHighlighter.vala  ValaTreeSitterHighlighter.vala
src/Widgets/: DapToolbar.vala  DocumentManager.vala  Editor.vala  FuzzyFinderDialog.vala  PreferencesDialog.vala  SearchInFilesDialog.vala  Terminal.vala  TextDocument.vala  TextView.vala
src/Widgets/Bookmarks/: BookMarksView.vala
src/Widgets/DiagnosticsView/: DiagnosticsPanel.vala
src/Widgets/Find/: SearchEngine.vala  SearchPage.vala  SearchResult.vala  SearchResultsView.vala  SearchWindow.vala
src/Widgets/Find/Engines/: FzfSearchEngine.vala  SymbolsSearchEngine.vala  TextSearchEngine.vala
src/Widgets/Panels/: BasePanel.vala  BookmarksPanel.vala  DiagnosticsPanel.vala  LogPanel.vala  ProjectPanel.vala  TerminalPanel.vala
src/Widgets/Panels/DapConsole/: DapConsolePanel.vala  DapConsoleWidget.vala
src/Widgets/Panels/LSP/: LspMonitorPanel.vala  LspServerRow.vala
src/Widgets/Search/: FuzzyFinderPage.vala  SearchCenterDialog.vala  SearchInFilesPage.vala  SearchPanelInterface.vala  SearchSymbolPage.vala
src/Widgets/SourceList/: SourceList.vala
src/Widgets/TextView/: BreadcrumbFileNavigator.vala  BreadcrumbSymbolOutlineNavigator.vala  BreadcrumbTreeSitterNavigator.vala  BreadcrumbsBar.vala  CodeActionsPopup.vala  DiagnosticsBar.vala  DiagnosticsPopover.vala  EditorOverlayLayer.vala  EditorStatusBar.vala  FindBar.vala  FontZoomer.vala  FormattingService.vala  GutterMarkRenderer.vala  LineNumbersGutter.vala  LspCompletionProvider.vala  PreviewSourceView.vala  SourceBookMark.vala  SourceView.vala  TabSwitcherPopup.vala  TextView.vala  TreeSitterFoldingGutter.vala
src/Widgets/ToolViews/: LogView.vala  ProjectView.vala  TerminalView.vala
src/interfaces/: PaneSwitcher.vala
symbols/: export_glyph.py  icons.json  meson.build  symbols.css
tests/: LSPService.vala  meson.build  test_lsp_service.vala
vapi/: libtreesitter.vapi
