iide_sources = [
    'main.vala',
    'application.vala',
    'window.vala',
    'Widgets/TextView/TextView.vala',
    'Widgets/TextView/SourceView.vala',
    'Widgets/TextView/FontZoomer.vala',
    'Widgets/TextView/GutterMarkRenderer.vala',
    'Widgets/TextView/EditorStatusBar.vala',
    'Widgets/TextView/LspCompletionProvider.vala',
    'Widgets/TextView/DiagnosticsPopover.vala',
    'Widgets/ToolViews/ProjectView.vala',
    'Widgets/ToolViews/TerminalView.vala',
    'Widgets/ToolViews/LogView.vala',
    # 'Widgets/Find/SearchResult.vala',
    'Widgets/Find/SearchResultsView.vala',
    'Widgets/Search/SearchPanelInterface.vala',
    'Widgets/Search/SearchCenterDialog.vala',
    'Widgets/Search/FuzzyFinderPage.vala',
    'Widgets/Search/SearchInFilesPage.vala',
    'Widgets/Search/SearchSymbolPage.vala',
    'Widgets/PreferencesDialog.vala',
    'Widgets/Panels/BasePanel.vala',
    'Widgets/Panels/LogPanel.vala',
    'Widgets/Panels/TerminalPanel.vala',
    'Widgets/Panels/DiagnosticsPanel.vala',
    'Widgets/Panels/ProjectPanel.vala',
    'Services/Utils.vala',
    'Services/JsonUtils.vala',
    'Services/StyleManager.vala',
    'Services/LoggerService.vala',
    'Services/DocumentManager.vala',
    'Services/IconProvider.vala',
    'Services/ProjectManager.vala',
    'Services/SettingsService.vala',
    'Services/PanelLayoutHelper.vala',
    'Services/LSP/LspTypes.vala',
    'Services/LSP/config/LspConfig.vala',
    'Services/LSP/config/PythonLspConfig.vala',
    'Services/LSP/config/CppLspConfig.vala',
    'Services/LSP/config/LspRegistry.vala',
    'Services/LSP/index/ClangTidy.vala',
    'Services/LSP/LspClient.vala',
    'Services/LSP/IdeLspService.vala',
    'Services/LSP/IdeLspManager.vala',
    'Services/LSP/LspDiagnosticsMark.vala',
    'Services/LSP/DiagnosticsService.vala',
    'Services/TreeSitter/TreeSitterManager.vala',
    'Services/TreeSitter/model/AstItem.vala',
    'Services/TreeSitter/model/AstModel.vala',
    'Services/TreeSitter/BaseTreeSitterHighlighter.vala',
    'Services/TreeSitter/cpp/CppTSHighlighter.vala',
    'Services/TreeSitter/vala/ValaTSHighlighter.vala',
    'Services/TreeSitter/rust/RustHighlighter.vala',
    'Services/TreeSitter/python/PythonTSHighlighter.vala',
    'Services/Actions/Action.vala',
    'Services/Actions/ActionManager.vala',
    'Services/Actions/ShortcutSettings.vala',
]

iide_deps = [
    config_dep,
    dependency('gtk4'),
    dependency('gio-2.0', version: '>= 2.50'),
    dependency('libadwaita-1', version: '>= 1.4'),
    dependency('libpanel-1', version: '>= 1.7'),
    dependency('gtksourceview-5'),
    dependency('vte-2.91-gtk4', version: '>= 0.75.0'),
    dependency('gee-0.8'),
    dependency('json-glib-1.0'),
    dependency('jsonrpc-glib-1.0'),
]

iide_sources += gnome.compile_resources('iide-resources', 'iide.gresource.xml', c_name: 'iide')

executable(
    'iide',
    iide_sources,
    dependencies: [iide_deps, tree_sitter_dep, core_dep],
    include_directories: config_inc,
    install: true,
)
