iide_sources = [
    'main.vala',
    'application.vala',
    'window.vala',
    'Widgets/TextView/TextView.vala',
    'Widgets/TextView/SourceView.vala',
    'Widgets/TextView/FontZoomer.vala',
    'Widgets/TextView/GutterMarkRenderer.vala',
    'Widgets/TextView/LineNumbersGutter.vala',
    'Widgets/TextView/BreadcrumbFileNavigator.vala',
    'Widgets/TextView/BreadcrumbTreeSitterNavigator.vala',
    'Widgets/TextView/BreadcrumbSymbolOutlineNavigator.vala',
    'Widgets/TextView/BreadcrumbsBar.vala',
    'Widgets/TextView/EditorStatusBar.vala',
    'Widgets/TextView/LspCompletionProvider.vala',
    'Widgets/TextView/TreeSitterFoldingGutter.vala',
    'Widgets/TextView/EditorOverlayLayer.vala',
    'Widgets/TextView/PreviewSourceView.vala',
    'Widgets/TextView/DiagnosticsPopover.vala',
    'Widgets/TextView/FormattingService.vala',
    'Widgets/TextView/TabSwitcherPopup.vala',
    'Widgets/ToolViews/ProjectView.vala',
    'Widgets/ToolViews/TerminalView.vala',
    'Widgets/ToolViews/LogView.vala',
    'Widgets/Find/SearchResult.vala',
    'Widgets/Find/SearchResultsView.vala',
    'Widgets/Find/SearchEngine.vala',
    'Widgets/Find/SearchPage.vala',
    'Widgets/Find/Engines/SymbolsSearchEngine.vala',
    'Widgets/Find/Engines/FzfSearchEngine.vala',
    'Widgets/Find/Engines/TextSearchEngine.vala',
    'Widgets/Find/SearchWindow.vala',
    'Widgets/PreferencesDialog.vala',
    'Widgets/Panels/BasePanel.vala',
    'Widgets/Panels/LogPanel.vala',
    'Widgets/Panels/TerminalPanel.vala',
    'Widgets/Panels/DiagnosticsPanel.vala',
    'Widgets/Panels/ProjectPanel.vala',
    'Services/Utils.vala',
    'Services/JsonUtils.vala',
    'Services/StyleManager.vala',
    'Services/LoggerService.vala',
    'Services/LanguageConfig.vala',
    'Services/LanguageRegistry.vala',
    'Services/DocumentManager.vala',
    'Services/PendingChange.vala',
    'Services/LSP/LspDocumentClient.vala',
    'Services/SourceNodeItem.vala',
    'Services/TreeSitter/IndentBlock.vala',
    'Services/TreeSitter/TreeSitterDocument.vala',
    'Services/SourceDocument.vala',
    'Services/ImageFactory.vala',
    'Services/SymbIconProvider.vala',
    'Services/ProjectManager.vala',
    'Services/SettingsService.vala',
    'Services/PanelLayoutHelper.vala',
    'Services/NavigationHistoryService.vala',
    'Services/LSP/LspTypes.vala',
    'Services/LSP/config/LspConfig.vala',
    'Services/LSP/index/ClangTidy.vala',
    'Services/LSP/LspClient.vala',
    'Services/LSP/LspService.vala',
    'Services/LSP/LspDiagnosticsMark.vala',
    'Services/LSP/DiagnosticsService.vala',
    'Services/TreeSitter/TreeSitterManager.vala',
    'Services/TreeSitter/model/AstItem.vala',
    'Services/TreeSitter/model/AstModel.vala',
    'Services/TreeSitter/BaseTreeSitterHighlighter.vala',
    'Services/TreeSitter/SimpleTreeSitterHighlighter.vala',
    'Services/TreeSitter/cpp/CppHighlighter.vala',
    'Services/TreeSitter/vala/ValaHighlighter.vala',
    'Services/TreeSitter/rust/RustHighlighter.vala',
    'Services/TreeSitter/python/PythonIndenter.vala',
    'Services/TreeSitter/python/PythonHighlighter.vala',
    'Services/Actions/AppAction.vala',
    'Services/Actions/AppActionsManager.vala',
]

iide_deps = [
    config_dep,
    dependency('gtk4'),
    dependency('gio-2.0', version: '>= 2.50'),
    dependency('libadwaita-1', version: '>= 1.4'),
    dependency('libpanel-1', version: '>= 1.7'),
    dependency('gtksourceview-5'),
    dependency('vte-2.91-gtk4', version: '>= 0.75.0'),
    dependency('gee-0.8'),
    dependency('json-glib-1.0'),
    dependency('jsonrpc-glib-1.0'),
]

iide_sources += gnome.compile_resources('iide-resources', 'iide.gresource.xml', c_name: 'iide')

executable(
    'iide',
    iide_sources + [symbols_res],
    dependencies: [iide_deps, tree_sitter_dep],
    include_directories: config_inc,
    install: true,
)
